--- a/SQL-Part-3-Studio.ipynb
+++ b/SQL-Part-3-Studio.ipynb
@@ -77,10 +77,19 @@
         {
             "cell_type": "code",
             "source": [
-                "-- Solution"
+                "-- Solution\r\n",
+                "SELECT TOP 5 t.tag_name, bt.tag_id, SUM(bt.count) AS total\r\n",
+                "FROM book_tags AS bt\r\n",
+                "FULL JOIN tags AS t\r\n",
+                "ON bt.tag_id = t.tag_id\r\n",
+                "GROUP BY t.tag_name, bt.tag_id\r\n",
+                "HAVING t.tag_name like '%female%'\r\n",
+                "ORDER BY total DESC\r\n",
+                ""
             ],
             "metadata": {
-                "azdata_cell_guid": "e31b9d26-0386-44c7-828e-85f4f06f3ee6"
+                "azdata_cell_guid": "e31b9d26-0386-44c7-828e-85f4f06f3ee6",
+                "language": "sql"
             },
             "outputs": [],
             "execution_count": null
@@ -110,11 +119,19 @@
         {
             "cell_type": "code",
             "source": [
-                "-- Solution"
+                "-- Solution\r\n",
+                "SELECT TOP 5 b.title, b.authors, b.average_rating, t.tag_id\r\n",
+                "FROM books AS b\r\n",
+                "INNER JOIN book_tags AS t\r\n",
+                "ON b.book_id = t.goodreads_book_id\r\n",
+                "WHERE tag_id = 11644\r\n",
+                "ORDER BY tag_id,average_rating DESC;\r\n",
+                "     "
             ],
             "metadata": {
                 "azdata_cell_guid": "51ffeaaf-6dde-4906-95f3-eb8757babf27",
-                "tags": []
+                "tags": [],
+                "language": "sql"
             },
             "outputs": [],
             "execution_count": null
@@ -167,7 +184,8 @@
                 "-- Event 1 Query"
             ],
             "metadata": {
-                "azdata_cell_guid": "f50d32ce-4cb2-4af2-acb1-607777a76cf8"
+                "azdata_cell_guid": "f50d32ce-4cb2-4af2-acb1-607777a76cf8",
+                "language": "sql"
             },
             "outputs": [],
             "execution_count": null
@@ -178,7 +196,8 @@
                 ""
             ],
             "metadata": {
-                "azdata_cell_guid": "5606f7f2-c46b-42d3-ac64-7ae21c3394f8"
+                "azdata_cell_guid": "5606f7f2-c46b-42d3-ac64-7ae21c3394f8",
+                "language": "sql"
             },
             "outputs": [],
             "execution_count": null
@@ -201,7 +220,8 @@
                 "-- Event 2 Query"
             ],
             "metadata": {
-                "azdata_cell_guid": "dca0a98f-065f-4b0e-9d93-fcb01cad668c"
+                "azdata_cell_guid": "dca0a98f-065f-4b0e-9d93-fcb01cad668c",
+                "language": "sql"
             },
             "outputs": [],
             "execution_count": null
@@ -212,7 +232,8 @@
                 ""
             ],
             "metadata": {
-                "azdata_cell_guid": "3aaae3a8-eff7-4b37-8970-2d913a67239b"
+                "azdata_cell_guid": "3aaae3a8-eff7-4b37-8970-2d913a67239b",
+                "language": "sql"
             },
             "outputs": [],
             "execution_count": null
